--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,19 @@
 body{
     margin: 0;
     overflow-x:hidden ;
+    background-image:url(../media/2feb97087d41615ba57ff34f707e796d.jpg );
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(255, 155, 24);
-    background-image:url(../media/baniere.jpg);
-    background-size: cover;
+    background-color: rgb(14, 12, 12, 0.9);
+
     background-position: 0 50%;
-    height: 150px;
+    height: 120px;
     text-decoration: none;
 }
 
@@ -19,6 +21,7 @@ nav *{
     text-decoration: none ;
     color: white ;
     font-size: 50px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
 
 }
@@ -39,10 +42,13 @@ nav, #nav1>a{
 
 img{
     margin: 20px
+    
 }
 
 #titre{
     margin: 5px;
+    color: rgb(247, 153, 12); 
+    
 
 }
 
