--- a/css/header.css
+++ b/css/header.css
@@ -11,34 +11,45 @@ header{
     justify-content: space-between;
     align-items: center;
     background-color: rgb(14, 12, 12, 0.9);
-
     background-position: 0 50%;
     height: 120px;
     text-decoration: none;
 }
 
-nav *{
+#div1 a{
     text-decoration: none ;
     color: white ;
-    font-size: 50px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    -webkit-text-stroke: 0.1px rgb(255, 255, 255);
 
 
 }
+#div1 a h2{
+    font-size: 90px;
+    font-family: "animeace";
 
-nav, #nav1>a{
+}
+
+div ul {
+    display: none;
+
+}
+div ul li{
+    display: block;
+
+}
+
+
+div, #div1>a{
     display: flex;
     align-items: center;
     
 }
 @font-face {
     font-family: "animeace";
-    src: url("../font/animeace_i.ttf");
+    src: url("../font/Saiyan-Sans.ttf");
 }
 
-* {
-    font-family: "animeace";
-}
+
 
 img{
     margin: 20px
@@ -62,11 +73,20 @@ footer .textefooter a{
     color: beige;
     margin: 20px;
 
-
 }
-footer div{
 
-}
 #insta{
     margin-bottom: 15px;
+}
+
+#menuCo li{
+    margin: 10px;
+}
+
+nav{
+    color: aliceblue;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgba(11, 9, 11, 0.9);
 }
