--- a/css/cgu.css
+++ b/css/cgu.css
@@ -1,8 +1,50 @@
-@font-face {
-    font-family: "animeace";
-    src: url("../font/animeace_i.ttf");
+body{
+  position: absolute;
+  top: 0; bottom:0; left: 0; right: 0; 
+  height: 0;
+  padding: 0;
+  background-size: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  background-color: black;
 }
 
-* {
-    font-family: "animeace";
+body::before{
+    content: "";
+    position: fixed;
+    height: 100%; width: 100%;
+    background-image: url(../media/2feb97087d41615ba57ff34f707e796d.jpg);
+    background-size: cover;
+    z-index: -1;
+    -webkit-filter: blur(8px);
+}
+
+
+.titre {
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+    -webkit-text-stroke: 0.1px black;
+}
+h4{
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    -webkit-text-stroke: 0.1px black;
+}
+
+p{
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/*.paragraphe{
+    display: flex;
+    justify-content: center;
 }
