--- a/css/footer.css
+++ b/css/footer.css
@@ -3,13 +3,15 @@ footer{
     justify-content: space-evenly;
     align-items: center;
     background-color: rgba(11, 9, 11, 0.9);
+    
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 footer *{
     text-decoration: none;
     color: white;
+
+ 
 }
 
-#center{
-    display: flex;
-    justify-content: space-evenly;
-}
