--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@ body{
     background-size: cover;
 }
 
-header{
+#header{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,9 +14,15 @@ header{
     background-position: 0 50%;
     height: 120px;
     text-decoration: none;
+
 }
 
-#div1 a{
+#header div {
+    display: flex;
+    align-items: center;
+}
+
+#div1 a, nav a, #menuCo li a{
     text-decoration: none ;
     color: white ;
     -webkit-text-stroke: 0.1px rgb(255, 255, 255);
@@ -39,7 +45,7 @@ div ul li{
 }
 
 
-div, #div1>a{
+#div1>a{
     display: flex;
     align-items: center;
     
@@ -72,6 +78,7 @@ img{
 footer .textefooter a{
     color: beige;
     margin: 20px;
+    
 
 }
 
@@ -89,4 +96,7 @@ nav{
     justify-content: space-evenly;
     align-items: center;
     background-color: rgba(11, 9, 11, 0.9);
+    position: relative;
+
+    
 }
