--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -1,3 +1,39 @@
-.titre{
+body::before{
+      content: "";
+      position: fixed;
+      height: 100%; width: 100%;
+      background-image: url(../media/2feb97087d41615ba57ff34f707e796d.jpg);
+      background-size: cover;
+      z-index: -1;
+      -webkit-filter: blur(8px);
+  }
 
+  main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    margin-left: 15%;
+    margin-right: 15%;
+    border-radius: 100px;
+  }
+  
+.titre {
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+    -webkit-text-stroke: 0.1px black;
+}
+
+p{
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+nav{
+    align-items: center;
 }
