--- a/css/footer.css
+++ b/css/footer.css
@@ -4,9 +4,9 @@ footer{
     align-items: center;
     background-color: rgba(11, 9, 11, 0.9);
     
-    position: fixed;
+    /* position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 100%; */
 }
 footer *{
     text-decoration: none;
