--- a/css/header.css
+++ b/css/header.css
@@ -12,6 +12,7 @@ body{
     background-position: 0 50%;
     height: 120px;
     text-decoration: none;
+    
 
 }
 
@@ -23,14 +24,14 @@ body{
 #div1 a, nav a, #menuCo li a{  
     text-decoration: none ;
     color: white ;
-    -webkit-text-stroke: 3px rgb(255, 255, 255);
+    -webkit-text-stroke: 3px rgb(255, 255, 255) ;
 }
 
 @media only screen and (max-width: 1500px) {
     #div1 a, nav a, #menuCo li a{  
         text-decoration: none ;
         color: white ;
-        -webkit-text-stroke: 0.1px rgb(255, 255, 255);
+        -webkit-text-stroke: 0.1px rgb(255, 255, 255) ;
     }
   }
   
@@ -104,9 +105,13 @@ nav{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgba(11, 9, 11, 0.9);
-    position: fixed;
+    background-color: rgba(11, 9, 11, 1);
+    position: sticky;
+    top: 0;
     width: 100%;
+    z-index: 99;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 
     
 }
