--- a/Inscription-Login.css
+++ b/Inscription-Login.css
@@ -5,13 +5,13 @@ main{
 
 .col1{
     opacity: 0.7;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-right: 50px;
 }
 
 .col2{
     opacity: 0.7;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-left: 50px;
 }
 
@@ -21,9 +21,15 @@ body{
     background-size: cover;
     margin: 0;
     overflow-x:hidden ;
+    font-family: 'Roboto', sans-serif;
 }
 
 footer{
     position: fixed;
     bottom: 0;
+    opacity: 0.7;
+}
+
+nav{
+    opacity: 0.7;
 }
