--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -1,3 +1,16 @@
+body{
+    position: absolute;
+    top: 0; bottom:0; left: 0; right: 0; 
+    height: 0;
+    padding: 0;
+    background-size: 100%;
+    width: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    background-color: black;
+  }
+
+
 body::before{
       content: "";
       position: fixed;
@@ -6,6 +19,7 @@ body::before{
       background-size: cover;
       z-index: -1;
       -webkit-filter: blur(8px);
+  
   }
 
   main{
@@ -21,17 +35,19 @@ body::before{
 .titre {
     text-align: center;
     color: #fff;
-    font-size: 30px;
+    font-size: 40px;
     -webkit-text-stroke: 0.1px black;
+
 }
 
 p{
     text-align: center;
     color: #fff;
-    font-size: 18px;
+    font-size: 25px;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -15px;
 }
 
 nav{
