--- a/css/Accueil.css
+++ b/css/Accueil.css
@@ -9,11 +9,14 @@
 body{
     overflow-x: hidden;
 }
+h1{
+    text-decoration: none;
+}
 
 #first{
     background: url(../media/Accueil/background2.png) fixed;
     background-size:cover;
-    height: 3000px;
+    height: 5000px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -33,7 +36,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     height:500px;
-    border: solid rgb(225, 27, 27) 3px;
+    /* border: solid rgb(225, 27, 27) 3px; */
     background-color: aliceblue;
     text-align: center;
     font-size: 30px;
@@ -44,13 +47,17 @@ body{
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.43);
     
 }
+.vignette:hover{
+    transform:scale(1.05);
+}
+
 .rectangle{
     display: flex;
     align-items: center;
     justify-content: center;
     width:100%;
     height:100px;
-    background-color: rgb(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.43);
 }
 .vignette h1{
     text-align: center;
@@ -62,10 +69,10 @@ body{
 }
 
 #film{
-    background: url(../media/Accueil/vignettemovie.png)
+    background: url(../media/Accueil/vignetteMovie.png);
 }
 #manga{
-    background: url(../media/Accueil/vignetteManga.png);
+    background: url(../media/Accueil/vignetteManga.png) ;
 }
 #jeux{
     background: url(../media/Accueil/vignetteGame.png) no-repeat;
@@ -73,6 +80,15 @@ body{
 }
 #séries{
     background: url(../media/Accueil/vignetteSerie.png);
+}
+#fanArt{
+    background: url(../media/Accueil/fanart.jpg) no-repeat;
+    background-size: cover;
+}
+#boutique{
+    background: url(../media/Accueil/boutique.jpg);
+    background-size: cover;
+    background-size: 50%;
 }
 
 
