--- a/css/footer.css
+++ b/css/footer.css
@@ -3,14 +3,13 @@ footer{
     justify-content: space-evenly;
     align-items: center;
     background-color: rgba(11, 9, 11, 0.9);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+    margin: 0px;
 
-    width: 100%;
 }
 footer *{
     text-decoration: none;
     color: white;
-
- 
+    
 }
 
