--- a/css/header.css
+++ b/css/header.css
@@ -24,14 +24,16 @@ body{
 #div1 a, nav a, #menuCo li a{  
     text-decoration: none ;
     color: white ;
-    -webkit-text-stroke: 3px rgb(255, 255, 255) ;
+}
+#div1 a, nav a, text.textefooter{  
+    -webkit-text-stroke: 2px rgb(255, 255, 255) ;
 }
 
 @media only screen and (max-width: 1500px) {
-    #div1 a, nav a, #menuCo li a{  
+    #div1 a, nav a, text.textefooter{  
         text-decoration: none ;
         color: white ;
-        -webkit-text-stroke: 0.1px rgb(255, 255, 255) ;
+        -webkit-text-stroke: 2px rgb(255, 255, 255) ;
     }
   }
   
@@ -85,11 +87,15 @@ img{
 
 }
 
+footer .textefooter{
+    color: beige;
+    margin: 20px;
+    font-size: 50px;
+    height: 60px;
+}
 footer .textefooter a{
     color: beige;
     margin: 20px;
-    
-
 }
 
 #insta{
@@ -98,6 +104,13 @@ footer .textefooter a{
 
 #menuCo li{
     margin: 10px;
+    height: 10px;
+    font-weight: 100;
+    font-size: 20px;
+    font-style: italic;
+    
+    
+
 }
 
 nav{
@@ -110,10 +123,7 @@ nav{
     top: 0;
     width: 100%;
     z-index: 99;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-
-    
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; 
 }
 #profil{
     border: 2px solid aliceblue;
@@ -122,3 +132,10 @@ nav{
 }
 
 
+nav h2{
+    margin: 10px;
+    font-size: 200%;    font-weight: 100;
+
+    height: 38.4px;
+
+}
