--- a/css/header.css
+++ b/css/header.css
@@ -129,7 +129,8 @@ nav{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; 
 }
 .active{
-    color: orangered;
+    color: orangered !important;
+    -webkit-text-stroke: 2px orangered ;
 }
 #profil{
     border: 2px solid aliceblue;
