--- a/css/Boutique.css
+++ b/css/Boutique.css
@@ -2,16 +2,45 @@ body {
     background-image: url(../media/back-ground_image.png);
 }
 
+.titre {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 43%;
+    display: flex;
+    align-items: center;
+    -webkit-text-stroke: 2px rgb(255, 255, 255)
+    
+}
+
 #btq {
     font-size: 70px;
     font-family: "animeace";
     text-align: center;
+    color: red !important;
+
+
+}
+
+#btque {
+    font-size: 70px;
+    font-family: "animeace";
+    text-align: center;
     color: orange !important;
+
+
+}
+
+#boutique {
+    font-size: 70px;
+    font-family: "animeace";
+    text-align: center;
+    color: red !important;
+
 }
 
 .test {
     overflow: hidden;
-    
+
 }
 
 .card-img-top {
@@ -35,10 +64,11 @@ body {
 
 
 @media only screen and (max-width: 1500px) {
-    #div1 a, #menuCo li a{  
-        text-decoration: none ;
-        color: white ;
+
+    #div1 a,
+    #menuCo li a {
+        text-decoration: none;
+        color: white;
         -webkit-text-stroke: 3px rgb(255, 255, 255) !important;
     }
-  }
-  
+}
