--- a/css/films.css
+++ b/css/films.css
@@ -1,16 +1,17 @@
 body { font-family: sans-serif; }
 
 .scene--card1 {
-  width: 900px;
-  height: 504px;
+  width: 530px;
+  height: 380px;
   border: 1px solid #CCC;
   margin: 40px 0;
   perspective: 600px;
+  margin-left: 20%;
 
 }
 .scene--card2 {
   width: 900px;
-  height: 500px;
+  height: 700px;
   border: 1px solid #CCC;
   margin: 40px 0;
   perspective: 600px;
@@ -20,7 +21,7 @@ body { font-family: sans-serif; }
 
 .scene--card3 {
   width: 900px;
-  height: 500px;
+  height: 600px;
   border: 1px solid #CCC;
   margin: 40px 0;
   perspective: 600px;
@@ -35,6 +36,7 @@ body { font-family: sans-serif; }
   transform-style: preserve-3d;
   transform-origin: center right;
   transition: transform 1s;
+  
   
   
 }
@@ -55,13 +57,13 @@ body { font-family: sans-serif; }
 }
 
 .bg1 {
-  background-image: url("../Dragon\ Ball\ la\ légende\ de\ Shenron.jfif");
-  background-size:cover ;
+  background-image: url("../La\ Légende\ de\ Shenron.jpg ");
+  background-size: cover ;
   
 }
 .bg2 {
-  background-image: url("../Dragon\ Ball\ Z\ Fusions.jfif");
-  background-size:cover ;
+  background-image: url("..//Dragon\ Ball\ Z\ Fusions.jpg");
+  background-size: cover ;
   
 }
 .bg3{
