--- a/css/header.css
+++ b/css/header.css
@@ -21,21 +21,12 @@ body{
     align-items: center;
 }
 
-#div1 a, #menuCo li a{  
-<<<<<<< HEAD
-    -webkit-text-stroke: 3px rgb(255, 255, 255) ;
-<<<<<<< HEAD
-}
 #div1 a, nav a ,#menuCo li a{  
     text-decoration: none ;
     color: white ;
    
 }
-=======
-=======
-    -webkit-text-stroke: 2px rgb(255, 255, 255) ;
->>>>>>> 2ca265a0bd22b9dde0c5faabb0fca7b3f5493555
-}
+
 #div1 a, nav a ,#menuCo li a{  
     text-decoration: none ;
     color: white ;
@@ -86,7 +77,7 @@ div ul li{
 
 
 
-img{
+header img{
     margin: 20px
     
 }
@@ -151,7 +142,7 @@ nav{
     z-index: 99;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; 
 }
-.active{
+.active1{
     color: orangered !important;
     -webkit-text-stroke: 2px orangered ;
 }
