--- a/css/header.css
+++ b/css/header.css
@@ -16,26 +16,12 @@ body{
 
 }
 
-#header div {
+#header #div1 {
     display: flex;
     align-items: center;
 }
 
-#div1 a, #menuCo li a{  
-<<<<<<< HEAD
-    -webkit-text-stroke: 3px rgb(255, 255, 255) ;
-<<<<<<< HEAD
-}
-#div1 a, nav a ,#menuCo li a{  
-    text-decoration: none ;
-    color: white ;
-   
-}
-=======
-=======
-    -webkit-text-stroke: 2px rgb(255, 255, 255) ;
->>>>>>> 2ca265a0bd22b9dde0c5faabb0fca7b3f5493555
-}
+
 #div1 a, nav a ,#menuCo li a{  
     text-decoration: none ;
     color: white ;
