--- a/css/header.css
+++ b/css/header.css
@@ -21,21 +21,7 @@ body{
     align-items: center;
 }
 
-#div1 a, #menuCo li a{  
-<<<<<<< HEAD
-    -webkit-text-stroke: 3px rgb(255, 255, 255) ;
-<<<<<<< HEAD
-}
-#div1 a, nav a ,#menuCo li a{  
-    text-decoration: none ;
-    color: white ;
-   
-}
-=======
-=======
-    -webkit-text-stroke: 2px rgb(255, 255, 255) ;
->>>>>>> 2ca265a0bd22b9dde0c5faabb0fca7b3f5493555
-}
+
 #div1 a, nav a ,#menuCo li a{  
     text-decoration: none ;
     color: white ;
@@ -86,7 +72,7 @@ div ul li{
 
 
 
-img{
+header img{
     margin: 20px
     
 }
