--- a/css/films.css
+++ b/css/films.css
@@ -7,7 +7,6 @@ background-image:url("../media/DBS Broly.jpg");
   height: 340px;
    margin: 40px 0;
   perspective: 600px;
-  margin-left: 15%;
    
 
 }
@@ -16,7 +15,6 @@ background-image:url("../media/DBS Broly.jpg");
   height: 340px;
   margin: 40px 0;
   perspective: 600px;
-  margin-left: 15%;
   
 
 }
@@ -27,7 +25,6 @@ background-image:url("../media/DBS Broly.jpg");
   height: 340px;
   margin: 40px 0;
   perspective: 600px;
-  margin-left: 15%;
   
 
 }
@@ -36,7 +33,6 @@ background-image:url("../media/DBS Broly.jpg");
   height: 300px;
   margin: 40px 0;
   perspective: 600px;
-  margin-left: 15%;
   
 }
 
@@ -137,8 +133,10 @@ background-image:url("../media/DBS Broly.jpg");
   background-color: black;
 }
 
-div{
+.ladiv{
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 
