--- a/css/header.css
+++ b/css/header.css
@@ -16,7 +16,7 @@ body{
 
 }
 
-#header #div1 {
+#header #div1, #header #div2 {
     display: flex;
     align-items: center;
 }
@@ -144,7 +144,6 @@ nav{
 #profil{
     border: 2px solid aliceblue;
     border-radius: 100px;
-
 }
 
 
