--- a/css/Boutique.css
+++ b/css/Boutique.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../media/back-ground_image.png);
+    background-image: url(../media/westcityBG.webp);
 }
 
 .titre {
@@ -71,9 +71,4 @@ body {
         color: white;
         -webkit-text-stroke: 3px rgb(255, 255, 255) !important;
     }
-<<<<<<< HEAD
 }
-=======
-  }
-  
->>>>>>> 5ec4607a2bf785c61a8d6f2bad5741040ef7110a
