--- a/css/Boutique.css
+++ b/css/Boutique.css
@@ -59,6 +59,13 @@ body {
 }
 
 
+.Visiter{
+    padding: 5px;
+    margin-left: 50%;
+    float: right;
+}
 
 
-
+.card-body{
+    background-color: rgb(228, 228, 228);
+}
