--- a/css/films.css
+++ b/css/films.css
@@ -260,7 +260,7 @@ body { font-family: sans-serif;
   }
     
   .bg6{
-    background-image: url("../Media films/Les Mercenaires de l'espace.webp");
+    background-image: url("../Media films/filmdbzbojack.jpg");
     background-size: cover;
   }
   .bg7{
