--- a/css/films.css
+++ b/css/films.css
@@ -12,6 +12,7 @@ body {
 
 .page {
   min-height: 100vh;
+  padding-top: 15px;
   overflow: hidden;
 }
 
@@ -54,7 +55,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
+  z-index: 199;
   width: 90%;
   height: 90%;
   border-radius: 50%;
@@ -78,6 +79,7 @@ body {
   pointer-events: auto;
   transition: 0.3s;
   background: black;
+  z-index: 199;
 }
 .circle-carousel .pagination .dot:hover {
   transform: translate(-50%, -50%) scale(1.05);
@@ -279,29 +281,29 @@ body { font-family: sans-serif;
   }  
   
   .cardM__face--back1{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751)
   }
   .cardM__face--back2{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751)
   }
   
   .cardM__face--back3{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751)
   }
   
   
   .cardM__face--back4{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751)
    }
 
   .cardM__face--back5{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751)
   }
   .cardM__face--back6{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751)
   }
   .cardM__face--back7{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751)
   }
 
   .cardM__face img {
@@ -338,7 +340,12 @@ body { font-family: sans-serif;
     align-items: center;
   }
   
-  
+  #text{
+    margin: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
   
   
   
