--- a/css/films.css
+++ b/css/films.css
@@ -279,29 +279,29 @@ body { font-family: sans-serif;
   }  
   
   .cardM__face--back1{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751);
   }
   .cardM__face--back2{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751);
   }
   
   .cardM__face--back3{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751);
   }
   
   
   .cardM__face--back4{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751);
    }
 
   .cardM__face--back5{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751);
   }
   .cardM__face--back6{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751);
   }
   .cardM__face--back7{
-    background-color: orangered;
+    background-color: rgba(94, 47, 0, 0.751);
   }
 
   .cardM__face img {
@@ -349,4 +349,4 @@ body { font-family: sans-serif;
   #vv{
     margin-bottom: 30px;
   }
-   
+
