--- a/css/jeux.css
+++ b/css/jeux.css
@@ -1,14 +1,9 @@
 main {
     /* background: url(../media/JeuxVideo/bgcell2.png);
     background-size: contain; */
-   background-color: black;
-   
-   
+    background-color: black;
 }
- 
-/* main {
-    height: 900px;
-} */
+
 
 /* TITRE */
 
@@ -36,21 +31,23 @@ main {
 
 }
 
-.vg {padding-bottom: 50px;
+.vg {
+    padding-bottom: 50px;
     margin: auto;
-    display: flex;}
+    display: flex;
+}
 
 /* SOUS-TITRE (SMARTPHONE)*/
 
 .sous-titre {
-    border:ridge ;
+    border: ridge;
     border-style: ridge;
     border-color: rgb(255, 255, 255);
     border-radius: 15px;
     padding-left: 50px;
     padding-top: 18px;
     padding-bottom: 15px;
-    margin-left: 70px   ;
+    margin-left: 70px;
     margin-right: 70px;
     margin-bottom: 80px;
     display: flex;
@@ -67,7 +64,7 @@ main {
 }
 
 #sttre {
-    font-size: 45px;
+    font-size: 55px;
     font-family: "animeace";
     color: orange !important;
 }
@@ -102,7 +99,7 @@ main {
 .card-title {
     margin-left: 10px;
     font-weight: 700;
-    
+
 }
 
 .card-text {
@@ -125,8 +122,8 @@ main {
 
 .btn {
     box-shadow:
-    inset 2px 2px 3px rgba(255, 255, 255, 0.6),
-    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+        inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+        inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
 
@@ -139,7 +136,8 @@ main {
     border-radius: 15px;
     padding-left: 50px;
     padding-top: 18px;
-    margin-left: 70px   ;
+    padding-bottom: 15px;
+    margin-left: 70px;
     margin-right: 70px;
     margin-bottom: 80px;
     display: flex;
@@ -178,7 +176,7 @@ main {
     color: red !important;
 }
 
-            /* DOKKAN */
+/* DOKKAN */
 
 .dokkan {
     display: flex;
@@ -186,10 +184,12 @@ main {
 
 }
 
-.gif1 { margin: auto;
-display: flex;}
+.gif1 {
+    margin: auto;
+    display: flex;
+}
 
-            /* DB LEGENDS */
+/* DB LEGENDS */
 
 .dblegends {
     margin-top: 30px;
@@ -245,7 +245,7 @@ display: flex;}
     border-color: red;
 }
 
-            /* DB SPARKING */
+/* DB SPARKING */
 
 .dbsparking {
     margin-top: 30px;
@@ -255,10 +255,12 @@ display: flex;}
     padding-top: 25px;
 }
 
-#sparkzero1 {margin-left: 170px;}
+#sparkzero1 {
+    margin-left: 170px;
+}
 
 
-            /* DB HEROES */
+/* DB HEROES */
 
 
 .dbheroes {
@@ -273,9 +275,12 @@ display: flex;}
 }
 
 
-#vidspark {position: relative; right:10px;}
+#vidspark {
+    position: relative;
+    right: 10px;
+}
 
-            /* DB KAKAROT */
+/* DB KAKAROT */
 
 .dbkakarot {
     margin-top: 30px;
@@ -293,7 +298,7 @@ display: flex;}
     right: 18px;
 }
 
-            /* DB FIGHTERZ */
+/* DB FIGHTERZ */
 
 .dbfighterz {
     margin-top: 30px;
@@ -311,7 +316,7 @@ display: flex;}
     right: 15px;
 }
 
-            /* DB XENOVERSE */
+/* DB XENOVERSE */
 
 .dbxenoverse {
     margin-top: 30px;
@@ -329,7 +334,7 @@ display: flex;}
     margin-left: 165px;
 }
 
-        /* DB THE BREAKERS */
+/* DB THE BREAKERS */
 
 
 .dbthebreakers {
