--- a/css/Accueil.css
+++ b/css/Accueil.css
@@ -90,7 +90,11 @@ h1{
     background-size: cover;
     background-size: 50%;
 }
-
+#ost{
+    background: url(../media/ost.webp) no-repeat;
+    background-size: cover;
+    background-position: 0%;
+}
 
 
 
